kubernetes/apps/monitoring/kiali/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
      namespace: monitoring
  hostnames:
    - kiali.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
